# vault

./: .gitignore  README.md  format.sh  meson.build
.github/workflows/: main.yml
core/: meson.build
core/src/: VaultDaemon.cpp
core/src/Adaptors/: Note.hpp  Note.xml
core/src/Interfaces/: Note.cpp  Note.hpp
core/src/Services/: DataManager.cpp  DataManager.hpp
core/src/Utils/: Logger.cpp  Logger.hpp
core/tests/: all_test.vala  delete_test.py  get_all_test.py  get_by_id_test.py  insert_test.py  update_test.py
daemon/: meson.build
daemon/data/: com.github.jeysonflores.vault.Daemon.service  com.github.jeysonflores.vault.daemon.service
daemon/src/: VaultDaemon.cpp
daemon/src/Adaptors/: Note.hpp  Note.xml
daemon/src/Interfaces/: Note.cpp  Note.hpp
daemon/src/Services/: DataManager.cpp  DataManager.hpp
daemon/src/Utils/: Logger.cpp
daemon/tests/: all_test.vala  delete_test.py  get_all_test.py  get_by_id_test.py  insert_test.py  update_test.py
data/: com.github.jeysonflores.vault.appdata.xml  com.github.jeysonflores.vault.desktop  com.github.jeysonflores.vault.gresource.xml  com.github.jeysonflores.vault.gschema.xml  style.css
src/: Application.cpp  Application.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.vala  Vault.cpp  Vault.hpp  Vault.vala
src/Interfaces/: Note.vala
src/Models/: Note.vala
src/Proxies/: Note.vala
src/Utils/: Styles.hpp
src/Views/: MainView.cpp  MainView.hpp  MainView.vala  WelcomeView.cpp  WelcomeView.hpp  WelcomeView.vala
src/Widgets/: Welcome.vala  WelcomeButton.vala
